creusot/tests/should_fail/prusti/blocked_lifetime/invariant1.stderr
error: invalid mut dereference of zombie expression with lifetime `'a` in state `'post`
 --> invariant1.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to 1 previous error

